kubernetes/flux-extras/onepassword/op-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-connect
  namespace: flux-system
spec:
  selector:
    matchLabels:
      app: op-connect
  template:
    metadata:
      labels:
        app: op-connect
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: credentials
          secret:
            secretName: op-credentials
      containers:
        - name: connect-api
          image: 1password/connect-api:1.5.7
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.2"
          ports:
            - name: connect-api
              containerPort: 8080
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
            - mountPath: /home/opuser/.config
              name: credentials
              readOnly: true
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: connect-api
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: connect-api
            initialDelaySeconds: 5
            periodSeconds: 5
        - name: connect-sync
          image: 1password/connect-sync:1.5.7
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.2"
          ports:
            - name: connect-sync
              containerPort: 8081
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
            - mountPath: /home/opuser/.config
              name: credentials
              readOnly: true
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: connect-sync
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: connect-sync
            initialDelaySeconds: 5
            periodSeconds: 5
