kubernetes/flux-extras/onepassword/op-connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-connect
  namespace: flux-system
spec:
  selector:
    app: op-connect
  ports:
    - name: connect-api
      port: 8080
      targetPort: connect-api
